; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_ui-out.c_ui_out_field_skip.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_ui-out.c_ui_out_field_skip.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ui_out = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ui_out_field_skip(%struct.ui_out* %0, i8* %1) #0 {
  %3 = alloca %struct.ui_out*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store %struct.ui_out* %0, %struct.ui_out** %3, align 8
  store i8* %1, i8** %4, align 8
  %8 = load %struct.ui_out*, %struct.ui_out** %3, align 8
  %9 = call i32 @verify_field(%struct.ui_out* %8, i32* %5, i32* %6, i32* %7)
  %10 = load %struct.ui_out*, %struct.ui_out** %3, align 8
  %11 = load i32, i32* %5, align 4
  %12 = load i32, i32* %6, align 4
  %13 = load i32, i32* %7, align 4
  %14 = load i8*, i8** %4, align 8
  %15 = call i32 @uo_field_skip(%struct.ui_out* %10, i32 %11, i32 %12, i32 %13, i8* %14)
  ret void
}

declare dso_local i32 @verify_field(%struct.ui_out*, i32*, i32*, i32*) #1

declare dso_local i32 @uo_field_skip(%struct.ui_out*, i32, i32, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
